# sysadmin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  change_dns  change_dns.cpp  changelog  check_hostname.cpp  check_ip.cpp  cmake_install.cmake  email.cpp  email_settings  freepbx_sysadmin.kdev4  functions.cpp  functions.hpp  get_netplan_config  get_netplan_config.cpp  get_raid  hostname.cpp  ifupdown.cpp  install_manifest.txt  mdadm.cpp  netplan.cpp  network  network.cpp  networkManager.cpp  networkd.cpp  notifications  notifications.cpp  packet_capture  packet_capture.cpp  power_management.cpp  powermgmt  raid.cpp  set_hostname  set_timezone  test.cpp  timezone.cpp
.kdev4/: freepbx_sysadmin.kdev4
install/: systemadmin-1.0.0-Debian12.deb  systemadmin-1.0.0-Ubuntu22-04.deb  systemadmin-latest-Debian12.deb  systemadmin-latest-Ubuntu22.04.deb.deb  systemadmin_1.0.0-4-Ubuntu22-04.deb
php/: sendCaptureWaring.php  sendStorageNotifications.php  updateCaptureTable.php
